objects/Request_for_Information_RFI__c.object
<CustomObject>
    <description>Facilitates the communications between Borrego and its subcontractors regarding Requests for Information, otherwise known as RFIs.</description>
    <fields>
        <fullName>APM_PC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Coordinator or Assistant PM from associated Site. Populated by Process Builder.</description>
        <label>APM/PC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISS_APM_PC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup to the related project.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to select the Account for which this RFI pertains.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Requests_for_Information_RFIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Lookup</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E800000015V4s, 00E800000015Rxj</value>
            </filterItems>
            <filterItems>
                <field>User.LastName</field>
                <operation>equals</operation>
                <value>Walter</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <inlineHelpText>The individual who is responsible for approving the Issue.</inlineHelpText>
        <label>Approver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aharon Wright</fullName>
                </value>
                <value>
                    <fullName>Anne Dunbar</fullName>
                </value>
                <value>
                    <fullName>Ben Walter</fullName>
                </value>
                <value>
                    <fullName>Brent Stafford</fullName>
                </value>
                <value>
                    <fullName>Dave Albrecht</fullName>
                </value>
                <value>
                    <fullName>David Dutil</fullName>
                </value>
                <value>
                    <fullName>Dean Smith</fullName>
                </value>
                <value>
                    <fullName>Duran Xiao</fullName>
                </value>
                <value>
                    <fullName>Eric Bastoul</fullName>
                </value>
                <value>
                    <fullName>Ertug Yurdutemiz</fullName>
                </value>
                <value>
                    <fullName>Frans van Bodengraven</fullName>
                </value>
                <value>
                    <fullName>Gary Buchanan</fullName>
                </value>
                <value>
                    <fullName>Michael Klug</fullName>
                </value>
                <value>
                    <fullName>Mrinmayee Kale</fullName>
                </value>
                <value>
                    <fullName>Pat Retelle</fullName>
                </value>
                <value>
                    <fullName>Ryan Salucci</fullName>
                </value>
                <value>
                    <fullName>Shay Banton</fullName>
                </value>
                <value>
                    <fullName>Steve Long</fullName>
                </value>
                <value>
                    <fullName>Terry Bruno</fullName>
                </value>
                <value>
                    <fullName>Tim Lee</fullName>
                </value>
                <value>
                    <fullName>Torsten Christian</fullName>
                </value>
                <value>
                    <fullName>William Christie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_to_Log_In_User__c</fullName>
        <formula>IF(  To_Borrego_Approver__c   = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign to Log In User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorized_Representative__c</fullName>
        <inlineHelpText>Enter the Authorized Representative assigned to this report if applicable.</inlineHelpText>
        <label>Authorized Representative</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <inlineHelpText>Enter the name of your business here.</inlineHelpText>
        <label>Business Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC1__c</fullName>
        <description>Allows user to enter an email address to be CC&apos;d on certain email alerts</description>
        <label>CC1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC2__c</fullName>
        <description>Allows user to enter an email address to be CC&apos;d on certain email alerts</description>
        <label>CC2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC3__c</fullName>
        <label>CC3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCIssueTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, triggers the CC Issue Tracker workflow rule.</inlineHelpText>
        <label>CCIssueTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clarification_Notes__c</fullName>
        <label>Clarification Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clarification_Requested_Response_Date__c</fullName>
        <label>Clarification Requested Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IF((Date_of_Site_Visit__c &gt; Site__r.PTO_Date__c) ,1,   

IF ((Date_of_Site_Visit__c &lt; Site__r.Mobilization_Date__c),0,

(1-(Site__r.PTO_Date__c -  Date_of_Site_Visit__c ) / (Site__r.PTO_Date__c  - Site__r.Mobilization_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% of the Project that is complete at the time of the Construction Control Site Visit. Based on the key dates entered on the related project.</inlineHelpText>
        <label>% Complete at Time of Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Construction_Requisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Requisition</label>
        <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_E_mail_Address__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email address of the listed external contact.</inlineHelpText>
        <label>Contact E-mail Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the account Contact to which this RFI is related.</description>
        <inlineHelpText>Your external contact for the issue. This needs to be a contact in Salesforce.</inlineHelpText>
        <label>External Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issue Tracker (Contact)</relationshipLabel>
        <relationshipName>Requests_for_Information_RFIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cost_Code__c.Category__c</field>
                <operation>equals</operation>
                <value>M</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cost_Code__c</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>The day that the Issue Tracker was created</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creator_Profile__c</fullName>
        <formula>CreatedBy.ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user that is creating the RFI should be listed here.</inlineHelpText>
        <label>Creator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Profile__c</fullName>
        <formula>$User.ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Branch__c</fullName>
        <description>Display which branch the issue tracker is associated with based on Project. Used for reporting purposes</description>
        <formula>Text(ASProject__r.Branch__c)</formula>
        <inlineHelpText>Displays the Issue Tracker Branch based on the Project</inlineHelpText>
        <label>Project Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Borrego_Communication__c</fullName>
        <description>Tracks the most recent outbound communication by Borrego.</description>
        <label>Date Most Recent Borrego Communication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>Used for the &quot;Generate RFI&quot; PDF</description>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Forecasted_Res_Date__c</fullName>
        <description>Used to track the first date entered in this field, needed for a WF email alert.</description>
        <inlineHelpText>Used to track the first date entered in this field, needed for a WF email alert.</inlineHelpText>
        <label>Date of 1st Forecasted Res Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Site_Visit__c</fullName>
        <inlineHelpText>Date of the Site Visit or Meeting associated with Construction Control.</inlineHelpText>
        <label>Date of Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Delayed__c</fullName>
        <description>Tracks the number of days the project&apos;s Schedule may be delayed by this RFI.</description>
        <label>Days Delayed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(ISBLANK( Issue_Closed_Date__c ), 
TODAY()- Issue_Submitted_Date__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between today and Issue Submitted Date if issue is still open</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <description>Only the engineering managers can see this.</description>
        <inlineHelpText>Is the delay excusable or not?</inlineHelpText>
        <label>Delay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excusable</fullName>
                </value>
                <value>
                    <fullName>Not Excusable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Engineer__c</fullName>
        <formula>Site__r.Senior_Design_Engineer__r.FirstName + &quot; &quot; + Site__r.Senior_Design_Engineer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Senior Design Engineer listed on the related Site.</inlineHelpText>
        <label>Senior Design Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description_Links_to_Files__c</fullName>
        <inlineHelpText>Enter a Detailed Description of the Issue/RFI. Provide any links to files</inlineHelpText>
        <label>Detailed Description &amp; Links to Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Tracks the details of the RFI.</description>
        <inlineHelpText>Enter a Detailed Description of the Issue/RFI.</inlineHelpText>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drawing_Reference__c</fullName>
        <description>Tracks any drawing reference information pertaining to the RFI.</description>
        <inlineHelpText>Use to reference the location on the plans where the information exists that is being discussed in the RFI.</inlineHelpText>
        <label>Drawing Reference</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Enter your email address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <description>Sub enters Contact and Vendor info here. Process populates it on child Submittal record. Used to make Sub Portal less confusing when entering Submittals</description>
        <inlineHelpText>Enter your name here.</inlineHelpText>
        <label>Contact Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Represents Record Type for Subcontractor Portal. Spec &amp; Submittal needs to display as Submittal to avoid confusion for Subs</description>
        <formula>IF( RecordTypeId = &quot;01280000000U9s1&quot;, &quot;RFI&quot;,
IF( RecordTypeId = &quot;012800000007gsp&quot;, &quot;Submittal&quot;,
IF( RecordTypeId = &quot;01280000000U9s6&quot;, &quot;RFI&quot;,
NULL ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Response_Date__c</fullName>
        <inlineHelpText>Date of final response that we are satisfied with.</inlineHelpText>
        <label>Forecasted Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Response__c</fullName>
        <label>Final Response</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Impact__c</fullName>
        <description>The actual $ amount changing or impacted by this RFI.</description>
        <inlineHelpText>Enter the actual $ amount changing or impacted by this RFI.</inlineHelpText>
        <label>Financial Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Borrego Employee who is submitting the external RFI for an internal answer</inlineHelpText>
        <label>From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_creator__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-fills upon saving with the record creator&apos;s name</inlineHelpText>
        <label>From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_APM_PC__c</fullName>
        <description>Checks to see if the Site has a PC or APM. Simplifies criteria logic used in associated Issue Tracker.</description>
        <formula>NOT( ISBLANK( Site__r.Project_Coordinator_APM__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has APM/PC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PEM__c</fullName>
        <description>Checks to see if the Site has a PEM. Simplifies criteria logic used in associated Issue Tracker.</description>
        <formula>IF(
NOT(ISBLANK( Site__r.Senior_Design_Engineer__c)),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has PEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PM__c</fullName>
        <description>Checks to see if the Site has a PM. Simplifies criteria logic used in associated Issue Tracker.</description>
        <formula>IF(
NOT( ISBLANK( Site__r.Project_Manager__c ) ),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SS__c</fullName>
        <description>Checks to see if the Site has a SS. Simplifies criteria logic used in associated Issue Tracker.</description>
        <formula>NOT( ISBLANK( Site__r.Site_Superintendent__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has SS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Date__c</fullName>
        <label>Initial Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Civil_Engineer_Email__c</fullName>
        <description>Internal Civil Engineer from the site email to be used in an email alert</description>
        <inlineHelpText>Site Internal Civil Engineer Site</inlineHelpText>
        <label>Internal Civil Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filled in by PEM</description>
        <inlineHelpText>Your point of contact at Borrego for this RFI.</inlineHelpText>
        <label>Borrego Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Trackerc6PK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Electrical_Engineer_Email__c</fullName>
        <description>used in issue tracker email alert</description>
        <inlineHelpText>Email pulled from related site</inlineHelpText>
        <label>Internal Electrical Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_PE_Manger_Emails__c</fullName>
        <description>Email address of the manager of the Internal PE to be used in email notification</description>
        <inlineHelpText>Email address of the manager of the Internal PE to be used in email notificaiton</inlineHelpText>
        <label>Internal PE Manger&apos; Emails</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_PE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Professional Engineer that is responsible for the report. This should be the internal engineer assigned to the project for the discipline of the site visit being entered.</inlineHelpText>
        <label>Internal PE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Structural_Engineer_Email__c</fullName>
        <description>used in issue tracker email alert</description>
        <inlineHelpText>pulls from related site</inlineHelpText>
        <label>Internal Structural Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in subcontractor portal to determine flow of communication</description>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Closed_Date__c</fullName>
        <description>Used for reporting</description>
        <label>Issue Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <description>This field was created to make a &quot;Common Field&quot; for the Issue Tracker Joined Report.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Rejected_Date__c</fullName>
        <description>Used for reporting</description>
        <label>Issue Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Submitted_Date__c</fullName>
        <description>Used for reporting</description>
        <label>Issue Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Tracker_Hyperlink__c</fullName>
        <description>Clickable hyperlink to the Issue Tracker. Replaces the ISS in the name to RFI, a format more easily recognizable to Subcontractors.</description>
        <formula>IF( 
OR( RecordTypeId = &quot;01280000000U9s1&quot;, RecordTypeId = &quot;01280000000U9s6&quot;),
HYPERLINK(Id, &quot;RFI&quot; + MID(Name, 4, LEN(Name))),
IF( RecordTypeId = &quot;012800000007gsp&quot;, HYPERLINK(Id, &quot;SUB&quot; + MID(Name, 4, LEN(Name))),
NULL ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Date__c</fullName>
        <label>Last Attachment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Response__c</fullName>
        <description>Latest response, used to append to Response history with proper date stamp an initial</description>
        <inlineHelpText>The response details to the issue submitted from the approver. Must be filled out before RFI can be complete</inlineHelpText>
        <label>Latest Response</label>
        <length>80768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Construction_Control_Document__c</fullName>
        <inlineHelpText>Link to the construction control document stored on box.com (Project Management folder)</inlineHelpText>
        <label>Link to Site Visit Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Material_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a material Issue or not?</inlineHelpText>
        <label>Material Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobilization_Date__c</fullName>
        <formula>ASProject__r.Site_Mobilization_Date__c</formula>
        <inlineHelpText>The mobilization date of the related project/site, when multiple sites exist this value displays 1st(earliest) of the Mobilization dates.</inlineHelpText>
        <label>Site Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_Record__c</fullName>
        <formula>IF( CreatedBy.Id = $User.Id, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Sheets__c</fullName>
        <label># of Sheets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_and_Additional_Information__c</fullName>
        <inlineHelpText>Use this section to add detailed notes.</inlineHelpText>
        <label>Notes and Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up to Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Record_Type__c</fullName>
        <formula>ASProject__r.AcctSeed__Opportunity__r.Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_SDE_Email__c</fullName>
        <description>used in new issue tracker email alert</description>
        <inlineHelpText>Pulls the Ops SDE email from the related site</inlineHelpText>
        <label>Ops SDE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Subcontractor Portal to determine flow of communication</description>
        <label>PM Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <description>formula field pulling Site PTO from project which is updated via Roll Up Helper.</description>
        <formula>ASProject__r.Site_PTO_Date__c</formula>
        <inlineHelpText>The PTO date of the related project/site.   IF there is more than one Site related to the project the value listed is the earliest PTO for all Sites.</inlineHelpText>
        <label>Site PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Enter your phone number here</inlineHelpText>
        <label>Phone</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_Eng_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Engineering Manager from the associated Site. Populated by Process Builder. Currently using Ops SDE until PEM is implemented.</description>
        <label>Proj. Eng. Manager/Ops SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ISS_PEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator_APM_Email__c</fullName>
        <description>Auto displays the email of the project Coordinator / APM from the related site</description>
        <inlineHelpText>pulled from related site</inlineHelpText>
        <label>Project Coordinator/APM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is hidden and is filled in a by a trigger. This field will be set to the same value as the Project__c field if the Issue Tracker recordtype is not &quot;Spec and Submittals&quot;. This is so we can control what type of Issue Tracker records are shown on the Project detail page.</description>
        <label>Project Link</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Issue Trackers</relationshipLabel>
        <relationshipName>Issue_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <description>used in issue tracker email alert</description>
        <inlineHelpText>pulled from related site</inlineHelpText>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required for the Subcontractor Portal. There is an issue with the Project PM appears to be set by a trigger so is not accurately pulling the PM from the Site.</description>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_TrackeryoVK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>ASProject__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The job number of the related project.</inlineHelpText>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the PM User field</description>
        <label>Project PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Information_RFIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Team__c</fullName>
        <formula>Site__r.Project_Manager__r.Email  + BR() + 
Site__r.Site_Superintendent__r.Email + BR() +
Site__r.Project_Coordinator_APM__r.Email  + BR() +
Site__r.Senior_Design_Engineer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Team:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Text__c</fullName>
        <description>Used for Subcontractor Portal. Avoids confusion for Subs. We don&apos;t want them clicking lookups</description>
        <formula>ASProject__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the name of the Borrego project to which this RFI is related.</description>
        <label>SFDCProject</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Issue Tracker</relationshipLabel>
        <relationshipName>Requests_for_Information_RFIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFI_Name2__c</fullName>
        <description>Use this field to generate the RFI number</description>
        <inlineHelpText>Use this field to generate the RFI number, it will show on the &quot;Generate Response&quot; pdf for out going RFI&apos;s.</inlineHelpText>
        <label>RFI Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Number_Text__c</fullName>
        <description>Text formula displaying the RFI Name in the sub portal. Used for email template merge field.</description>
        <formula>&quot;RFI&quot; + MID(Name, 4, LEN(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFI Number</label>
        <type>Text</type>
    </fields>
</CustomObject>